data/derived/fa15/progs/unify/prog0126.ml.out
Characters 17-22:
  let _ = sumList [33, 6];;
                   ^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
